--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <div >
+    <h1>lekker stacken</h1>
+    
+    <div class="beld-Container">
+        <input type="button" value="addbeld" onclick="addBeld()"/>
         <my-beld></my-beld>
     </div>
     
